rendered/envs/demo/gitpod/ingressroute-gitpod-s4.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    external-dns.alpha.kubernetes.io/target: lb.demo.budd.ee
    kubernetes.io/ingress.class: traefik
  name: gitpod-s4
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`python-web-s4.demo.budd.ee`)
      middlewares:
        - name: gitpod-s4
      priority: 10
      services:
        - name: gitpod-s4
          port: 3000
          scheme: http
    - kind: Rule
      match: Host(`s4.python.demo.budd.ee`)
      middlewares:
        - name: redirect-s4
      priority: 10
      services:
        - name: gitpod-s4
          port: 3000
          scheme: http
